# local-deep-research

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml
docs/logs/: 20260117-150000.md  20260117-195029-phase2-python-setup.md  20260117-195029.md  20260117-205500.md  20260117-212329.md  20260118-120000-phase5-graph-construction.md  20260118-130000-phase6-optimization.md  20260118-133500-phase7-documentation.md  20260118-phase4-implementation.md  TEMPLATE.md
docs/plans/: 20260117-134549-initial-implementation-plan.md  20260117-182151-phase1.1-docker-setup.md  20260117-192226-phase2-python-project-setup.md  20260117-204906-phase3-tools-implementation.md  20260117-212457-phase3.4-4-implementation.md  20260118-120000-phase5-graph-construction.md  20260118-translation-feature.md
plans/: 20260117-134000-deep-research-result.md  20260117-134549-initial-implementation-plan.md
searxng/: settings.yml
src/: __init__.py  config.py  graph.py  llm.py  main.py  state.py
src/nodes/: planner.py  researcher.py  reviewer.py  scraper.py  translator.py  writer.py
src/prompts/: templates.py
src/tools/: __init__.py  scrape.py  search.py  translate.py
tests/: __init__.py  conftest.py  test_config.py  test_graph.py  test_llm.py  test_main.py  test_prompts.py  test_state.py
tests/integration/: test_error_handling.py  test_workflow.py
tests/nodes/: __init__.py  test_planner.py  test_researcher.py  test_reviewer.py  test_scraper.py  test_translator.py  test_writer.py
tests/tools/: test_scrape.py  test_search.py  test_translate.py
